--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ html.dark-mode .ranking-silver {
   line-height: 1;
   color: var(--heading-color);
 }
-.ranking-gold .ranking-number { color: #f57f17; }
+.ranking-silver-unused { color: #f57f17; }
 .ranking-silver .ranking-number { color: var(--accent-color); }
 .ranking-label {
   font-family: 'Raleway', sans-serif;
@@ -449,7 +449,8 @@ html.dark-mode .ranking-silver {
     </h1>
 
     <p class="hero-tagline" data-aos="fade-up" data-aos-delay="200">
-      École francophone à Oakville — apprentissage, engagement et fierté des GAGE Griffons.
+      La meilleure école secondaire francophone en Ontario.<br/>
+      <em>Ici, t'arrives comme élève. Tu repars comme Griffon.</em>
     </p>
 
     <div class="hero-buttons" data-aos="fade-up" data-aos-delay="300">
@@ -475,7 +476,7 @@ html.dark-mode .ranking-silver {
         <i class="bi bi-trophy-fill"></i>
         <div class="hi-text">
           <strong>Sports GAGE</strong>
-          <span>9 sports, 54 équipes</span>
+          <span>Équipes et résultats</span>
         </div>
       </a>
       <a class="highlight-item" href="calendrier.html">
@@ -512,8 +513,8 @@ html.dark-mode .ranking-silver {
         <p class="gage-section-sub">Fraser Institute — Classement des écoles secondaires de l'Ontario</p>
       </div>
       <div class="col-lg-5 col-md-6" data-aos="fade-up" data-aos-delay="100">
-        <div class="ranking-card ranking-gold">
-          <div class="ranking-medal">🥇</div>
+        <div class="ranking-card ranking-silver">
+          <div class="ranking-medal">🏅</div>
           <div class="ranking-text">
             <div class="ranking-number">#1</div>
             <div class="ranking-label">Meilleure école secondaire<br/>francophone en Ontario</div>
@@ -619,77 +620,7 @@ html.dark-mode .ranking-silver {
   </div>
 </section>
 
-<!-- ══ QUICK LINKS ══════════════════════════════════════════════════════════ -->
-<section class="section" id="quick-links">
-  <div class="container">
-    <div class="text-center mb-2" data-aos="fade-up">
-      <p class="gage-section-title">Accès Rapide</p>
-      <p class="gage-section-sub">Tout ce dont vous avez besoin en un clic</p>
-    </div>
-    <div class="row gy-4">
-      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-        <a class="quick-link-card" href="athletisme.html">
-          <i class="bi bi-trophy-fill"></i>
-          <div>
-            <strong>Sports</strong>
-            <span>Équipes, résultats et classements</span>
-          </div>
-          <i class="bi bi-arrow-right arrow"></i>
-        </a>
-      </div>
-      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="150">
-        <a class="quick-link-card" href="calendrier.html">
-          <i class="bi bi-calendar3"></i>
-          <div>
-            <strong>Calendrier scolaire</strong>
-            <span>Dates importantes et événements</span>
-          </div>
-          <i class="bi bi-arrow-right arrow"></i>
-        </a>
-      </div>
-      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-        <a class="quick-link-card" href="activite.html">
-          <i class="bi bi-stars"></i>
-          <div>
-            <strong>Activité</strong>
-            <span>Vie étudiante et parascolaire</span>
-          </div>
-          <i class="bi bi-arrow-right arrow"></i>
-        </a>
-      </div>
-      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="250">
-        <a class="quick-link-card" href="personnel.html">
-          <i class="bi bi-people-fill"></i>
-          <div>
-            <strong>Personnel</strong>
-            <span>Enseignants et administration</span>
-          </div>
-          <i class="bi bi-arrow-right arrow"></i>
-        </a>
-      </div>
-      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
-        <a class="quick-link-card" href="https://www.embroidme-oakville.com/sr/4032133" target="_blank">
-          <i class="bi bi-bag-fill"></i>
-          <div>
-            <strong>Boutique GAGE</strong>
-            <span>Vêtements et articles scolaires</span>
-          </div>
-          <i class="bi bi-arrow-right arrow"></i>
-        </a>
-      </div>
-      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="350">
-        <a class="quick-link-card" href="contact.html">
-          <i class="bi bi-envelope-fill"></i>
-          <div>
-            <strong>Nous joindre</strong>
-            <span>Coordonnées et formulaire</span>
-          </div>
-          <i class="bi bi-arrow-right arrow"></i>
-        </a>
-      </div>
-    </div>
-  </div>
-</section>
+
 
 </main>
 <div id="footer-placeholder"></div>
