--- a/index.html
+++ b/index.html
@@ -553,8 +553,8 @@ html.dark-mode .ranking-silver {
       </div>
       <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
         <div class="pilier-card">
-          <div class="pilier-icon" style="background:color-mix(in srgb, var(--accent-color), transparent 85%);">
-            <i class="bi bi-trophy-fill" style="color:var(--accent-color);"></i>
+          <div class="pilier-icon" style="background:color-mix(in srgb, #4caf50, transparent 85%);">
+            <i class="bi bi-trophy-fill" style="color:#4caf50;"></i>
           </div>
           <h4>Esprit sportif</h4>
           <p>Nos Griffons compétitionnent avec fierté dans 9 sports à travers la région de Halton.</p>
@@ -562,8 +562,8 @@ html.dark-mode .ranking-silver {
       </div>
       <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
         <div class="pilier-card">
-          <div class="pilier-icon" style="background:color-mix(in srgb, #9c27b0, transparent 85%);">
-            <i class="bi bi-music-note-beamed" style="color:#9c27b0;"></i>
+          <div class="pilier-icon" style="background:color-mix(in srgb, #4caf50, transparent 85%);">
+            <i class="bi bi-music-note-beamed" style="color:#4caf50;"></i>
           </div>
           <h4>Arts et culture</h4>
           <p>Un milieu francophone vivant qui célèbre la langue, les arts et l'identité culturelle.</p>
@@ -571,8 +571,8 @@ html.dark-mode .ranking-silver {
       </div>
       <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="400">
         <div class="pilier-card">
-          <div class="pilier-icon" style="background:color-mix(in srgb, #ff9800, transparent 85%);">
-            <i class="bi bi-heart-fill" style="color:#ff9800;"></i>
+          <div class="pilier-icon" style="background:color-mix(in srgb, #4caf50, transparent 85%);">
+            <i class="bi bi-heart-fill" style="color:#4caf50;"></i>
           </div>
           <h4>Communauté</h4>
           <p>Un environnement inclusif et bienveillant où chaque élève peut s'épanouir.</p>
@@ -603,9 +603,9 @@ html.dark-mode .ranking-silver {
       <div class="col-lg-3 col-md-6">
         <div class="stat-card">
           <div class="stat-number">
-            <span class="purecounter" data-purecounter-start="0" data-purecounter-end="100" data-purecounter-duration="1"></span>%
+            <span class="purecounter" data-purecounter-start="0" data-purecounter-end="120" data-purecounter-duration="1"></span>+
           </div>
-          <div class="stat-label">Francophone</div>
+          <div class="stat-label">Cours offerts en personne</div>
         </div>
       </div>
       <div class="col-lg-3 col-md-6">
