--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@ html.dark-mode .ranking-silver {
       <div class="col-lg-5 col-md-6" data-aos="fade-up" data-aos-delay="100">
         <div class="ranking-card ranking-silver">
           <div class="ranking-medal">🏅</div>
-          <div class="ranking-text">
+          <div class="ranking-main">
             <div class="ranking-number">#1</div>
             <div class="ranking-label">Meilleure école secondaire<br/>francophone en Ontario</div>
           </div>
@@ -524,7 +524,7 @@ html.dark-mode .ranking-silver {
       <div class="col-lg-5 col-md-6" data-aos="fade-up" data-aos-delay="200">
         <div class="ranking-card ranking-silver">
           <div class="ranking-medal">🏅</div>
-          <div class="ranking-text">
+          <div class="ranking-main">
             <div class="ranking-number">#8</div>
             <div class="ranking-label">Meilleure école secondaire<br/>toutes catégories en Ontario</div>
           </div>
@@ -611,9 +611,9 @@ html.dark-mode .ranking-silver {
       <div class="col-lg-3 col-md-6">
         <div class="stat-card">
           <div class="stat-number">
-            <span class="purecounter" data-purecounter-start="0" data-purecounter-end="8" data-purecounter-duration="1"></span>e
+            <span class="purecounter" data-purecounter-start="0" data-purecounter-end="100%" data-purecounter-duration="1"></span>e
           </div>
-          <div class="stat-label">École en Ontario</div>
+          <div class="stat-label">Francophone</div>
         </div>
       </div>
     </div>
