--- a/index.html
+++ b/index.html
@@ -393,31 +393,35 @@ html.dark-mode .ranking-silver {
   background: linear-gradient(135deg, rgba(255,255,255,0.06), rgba(255,255,255,0.03));
 }
 .ranking-medal {
-  font-size: 52px;
+  font-size: 44px;
   line-height: 1;
   flex-shrink: 0;
 }
+.ranking-main {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  flex-wrap: wrap;
+}
 .ranking-number {
   font-family: 'Bebas Neue', sans-serif;
-  font-size: 64px;
+  font-size: 72px;
   line-height: 1;
-  color: var(--heading-color);
+  color: var(--accent-color);
+  flex-shrink: 0;
 }
-.ranking-silver-unused { color: #f57f17; }
-.ranking-silver .ranking-number { color: var(--accent-color); }
 .ranking-label {
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
-  font-size: 14px;
+  font-size: 15px;
   color: var(--default-color);
-  opacity: 0.8;
-  line-height: 1.5;
-  margin-top: 4px;
+  opacity: 0.85;
+  line-height: 1.4;
 }
 @media (max-width: 480px) {
-  .ranking-card { padding: 24px 20px; gap: 16px; }
-  .ranking-number { font-size: 48px; }
-  .ranking-medal { font-size: 40px; }
+  .ranking-card { padding: 20px 18px; gap: 14px; }
+  .ranking-number { font-size: 52px; }
+  .ranking-medal { font-size: 34px; }
 }
 </style>
 </head>
@@ -602,8 +606,7 @@ html.dark-mode .ranking-silver {
       </div>
       <div class="col-lg-3 col-md-6">
         <div class="stat-card">
-          <div class="stat-number">
-            <span class="purecounter" data-purecounter-start="0" data-purecounter-end="120" data-purecounter-duration="1"></span>+
+          <div class="stat-number">100%</div>
           </div>
           <div class="stat-label">Cours offerts en personne</div>
         </div>
@@ -611,9 +614,9 @@ html.dark-mode .ranking-silver {
       <div class="col-lg-3 col-md-6">
         <div class="stat-card">
           <div class="stat-number">
-            <span class="purecounter" data-purecounter-start="0" data-purecounter-end="100%" data-purecounter-duration="1"></span>e
+            <span class="purecounter" data-purecounter-start="0" data-purecounter-end="8" data-purecounter-duration="1"></span>e
           </div>
-          <div class="stat-label">Francophone</div>
+          <div class="stat-label">École en Ontario</div>
         </div>
       </div>
     </div>
