--- a/index.html
+++ b/index.html
@@ -606,7 +606,8 @@ html.dark-mode .ranking-silver {
       </div>
       <div class="col-lg-3 col-md-6">
         <div class="stat-card">
-          <div class="stat-number">100%</div>
+          <div class="stat-number">
+            <span class="purecounter" data-purecounter-start="0" data-purecounter-end="120" data-purecounter-duration="1"></span>+
           </div>
           <div class="stat-label">Cours offerts en personne</div>
         </div>
@@ -614,9 +615,9 @@ html.dark-mode .ranking-silver {
       <div class="col-lg-3 col-md-6">
         <div class="stat-card">
           <div class="stat-number">
-            <span class="purecounter" data-purecounter-start="0" data-purecounter-end="8" data-purecounter-duration="1"></span>e
+            <span class="purecounter" data-purecounter-start="0" data-purecounter-end="100" data-purecounter-duration="1"></span>%
           </div>
-          <div class="stat-label">École en Ontario</div>
+          <div class="stat-label">Francophone</div>
         </div>
       </div>
     </div>
