--- a/equipes/basketball-garcons-senior-2025-2026.html
+++ b/equipes/basketball-garcons-senior-2025-2026.html
@@ -289,7 +289,7 @@
               <img src="/ESGAGE/assets/img/sportslogos/basketball.png" alt="Basketball" style="width:64px;height:64px;object-fit:contain;"/>
             </div>
             <h1>Basketball — Garçons Senior</h1>
-            <p class="mb-0">Notre équipe, calendrier et classement HSSAA.</p>
+            <p class="mb-0">Saison 2025–2026</p>
           </div>
         </div>
       </div>
@@ -568,7 +568,7 @@ function renderScores(scores, replays = []) {
   }
 }
 
-const REPLAYS_FILE = "/ESGAGE/assets/data/sports/basketball-garcons-senior-replays.json";
+const REPLAYS_FILE = "/ESGAGE/assets/data/sports/basketball-garcons-senior-2025-2026-replays.json";
 
 function setError(msg) {
   ["upcoming-container","scores-container","standings-container"].forEach(id => {
