--- a/equipes/volleyball-garcons-senior-2025-2026.html
+++ b/equipes/volleyball-garcons-senior-2025-2026.html
@@ -270,7 +270,7 @@
               <img src="/ESGAGE/assets/img/sportslogos/volleyball.png" alt="Volleyball" style="width:64px;height:64px;object-fit:contain;"/>
             </div>
             <h1>Volleyball — Garçons Senior</h1>
-            <p class="mb-0">Notre équipe, calendrier et classement HSSAA.</p>
+            <p class="mb-0">Saison 2025–2026</p>
           </div>
         </div>
       </div>
@@ -561,7 +561,7 @@ function setError(msg) {
   });
 }
 
-const REPLAYS_FILE_VB = "/ESGAGE/assets/data/sports/volleyball-garcons-senior-replays.json";
+const REPLAYS_FILE_VB = "/ESGAGE/assets/data/sports/volleyball-garcons-senior-2025-2026-replays.json";
 
 fetch(DATA_FILE)
   .then(r => { if (!r.ok) throw new Error("HTTP " + r.status); return r.json(); })
