--- a/athletisme.html
+++ b/athletisme.html
@@ -279,24 +279,9 @@
           <p class="age-group-title"><img src="assets/img/sportslogos/crosscountry.png" alt="" style="width:24px;height:24px;object-fit:contain;vertical-align:middle;margin-right:8px;"> Course de fond — Choisissez votre équipe</p>
         </div>
         <div class="d-flex justify-content-center gap-4 flex-wrap align-items-start">
-          <!-- Filles -->
-          <div style="min-width:200px;">
-            <p class="gender-col-title girls">Filles</p>
-            <div class="d-flex flex-column gap-2">
-              <a class="age-btn" href="/ESGAGE/equipes/crosscountry-filles-78.html">7<sup>e</sup>/8<sup>e</sup></a>
-              <a class="age-btn" href="/ESGAGE/equipes/crosscountry-filles-junior.html">Junior</a>
-              <a class="age-btn" href="/ESGAGE/equipes/crosscountry-filles-senior.html">Senior</a>
-            </div>
-          </div>
-          <div class="gender-divider"></div>
-          <!-- Garçons -->
-          <div style="min-width:200px;">
-            <p class="gender-col-title boys">Garçons</p>
-            <div class="d-flex flex-column gap-2">
-              <a class="age-btn" href="/ESGAGE/equipes/crosscountry-garcons-78.html">7<sup>e</sup>/8<sup>e</sup></a>
-              <a class="age-btn" href="/ESGAGE/equipes/crosscountry-garcons-junior.html">Junior</a>
-              <a class="age-btn" href="/ESGAGE/equipes/crosscountry-garcons-senior.html">Senior</a>
-            </div>
+          <div class="d-flex flex-column gap-2">
+            <a class="age-btn" href="/ESGAGE/equipes/coursdefond-78.html">7<sup>e</sup>/8<sup>e</sup></a>
+            <a class="age-btn" href="/ESGAGE/equipes/coursdefond-secondaire.html">Secondaire</a>
           </div>
         </div>
       </div>
@@ -338,24 +323,9 @@
           <p class="age-group-title"><img src="assets/img/sportslogos/swimming.png" alt="" style="width:24px;height:24px;object-fit:contain;vertical-align:middle;margin-right:8px;"> Natation — Choisissez votre équipe</p>
         </div>
         <div class="d-flex justify-content-center gap-4 flex-wrap align-items-start">
-          <!-- Filles -->
-          <div style="min-width:200px;">
-            <p class="gender-col-title girls">Filles</p>
-            <div class="d-flex flex-column gap-2">
-              <a class="age-btn" href="/ESGAGE/equipes/natation-filles-78.html">7<sup>e</sup>/8<sup>e</sup></a>
-              <a class="age-btn" href="/ESGAGE/equipes/natation-filles-junior.html">Junior</a>
-              <a class="age-btn" href="/ESGAGE/equipes/natation-filles-senior.html">Senior</a>
-            </div>
-          </div>
-          <div class="gender-divider"></div>
-          <!-- Garçons -->
-          <div style="min-width:200px;">
-            <p class="gender-col-title boys">Garçons</p>
-            <div class="d-flex flex-column gap-2">
-              <a class="age-btn" href="/ESGAGE/equipes/natation-garcons-78.html">7<sup>e</sup>/8<sup>e</sup></a>
-              <a class="age-btn" href="/ESGAGE/equipes/natation-garcons-junior.html">Junior</a>
-              <a class="age-btn" href="/ESGAGE/equipes/natation-garcons-senior.html">Senior</a>
-            </div>
+          <div class="d-flex flex-column gap-2">
+            <a class="age-btn" href="/ESGAGE/equipes/natation-78.html">7<sup>e</sup>/8<sup>e</sup></a>
+            <a class="age-btn" href="/ESGAGE/equipes/natation-secondaire.html">Secondaire</a>
           </div>
         </div>
       </div>
