--- a/athletisme.html
+++ b/athletisme.html
@@ -257,7 +257,7 @@
             <p class="gender-col-title girls">Filles</p>
             <div class="d-flex flex-column gap-2">
               <a class="age-btn" href="/ESGAGE/equipes/basketball-filles-78.html">7<sup>e</sup>/8<sup>e</sup></a>
-              <a class="age-btn" href="/ESGAGE/equipes/basketball-filles-junior.html">Junior</a>
+              <!--<a class="age-btn" href="/ESGAGE/equipes/basketball-filles-junior.html">Junior</a>-->
               <a class="age-btn" href="/ESGAGE/equipes/basketball-filles-senior.html">Senior</a>
             </div>
           </div>
@@ -267,7 +267,7 @@
             <p class="gender-col-title boys">Garçons</p>
             <div class="d-flex flex-column gap-2">
               <a class="age-btn" href="/ESGAGE/equipes/basketball-garcons-78.html">7<sup>e</sup>/8<sup>e</sup></a>
-              <a class="age-btn" href="/ESGAGE/equipes/basketball-garcons-junior.html">Junior</a>
+              <!--<a class="age-btn" href="/ESGAGE/equipes/basketball-garcons-junior.html">Junior</a>-->
               <a class="age-btn" href="/ESGAGE/equipes/basketball-garcons-senior-2025-2026.html">Senior</a>
             </div>
           </div>
