--- a/cours.html
+++ b/cours.html
@@ -228,41 +228,23 @@ html.dark-mode .pb-e { background:rgba(123,31,162,.18); color:#ce93d8; }
         <div class="cell cu"><div class="pill" data-pid="SES4U"><span class="pcode">SES4U</span><span class="pname">Sciences de la Terre</span></div></div>
       </div>
 
-      <!-- SNC4M — tout cours de sciences 11e -->
-      <div class="path-spacer"></div>
-      <div class="pathway-row"><div class="pathway-label-row"><span class="pbadge pb-u">Pré-Univ. / Précollégial — tout cours de sciences 11<sup>e</sup></span></div></div>
-      <div class="pathway-row no-border">
-        <div class="cell-empty"></div>
-        <div class="cell-empty"></div>
-        <div class="cell-empty"></div>
-        <div class="cell cu"><div class="pill" data-pid="SNC4M"><span class="pcode">SNC4M</span><span class="pname">Sciences</span></div></div>
-      </div>
-
       <!-- Pré-Collégiale -->
       <div class="path-spacer"></div>
       <div class="pathway-row"><div class="pathway-label-row"><span class="pbadge pb-c"><i class="bi bi-building me-1"></i>Pré-Collégiale</span></div></div>
       <div class="pathway-row no-border">
         <div class="cell cc"><div class="pill" data-pid="SNC1W_c"><span class="pcode">SNC1W</span><span class="pname">Sciences</span></div></div>
         <div class="cell cc"><div class="pill" data-pid="SNC2P"><span class="pcode">SNC2P</span><span class="pname">Sciences</span></div></div>
-        <div class="cell cc"><div class="pill" data-pid="SVN3M"><span class="pcode">SVN3M</span><span class="pname">Sciences env.</span></div></div>
+        <div class="cell cc"><div class="pill" data-pid="SBI3C"><span class="pcode">SBI3C</span><span class="pname">Biologie</span></div></div>
         <div class="cell cc"><div class="pill" data-pid="SCH4C"><span class="pcode">SCH4C</span><span class="pname">Chimie</span></div></div>
       </div>
       <div class="pathway-row no-border tight">
         <div class="cell-empty"></div>
         <div class="cell-empty"></div>
-        <div class="cell cc"><div class="pill" data-pid="SBI3C"><span class="pcode">SBI3C</span><span class="pname">Biologie</span></div></div>
+        <div class="cell-empty"></div>
         <div class="cell cc"><div class="pill" data-pid="SPH4C"><span class="pcode">SPH4C</span><span class="pname">Physique</span></div></div>
       </div>
-
-      <!-- Préemploi -->
-      <div class="path-spacer"></div>
-      <div class="pathway-row"><div class="pathway-label-row"><span class="pbadge pb-e"><i class="bi bi-tools me-1"></i>Préemploi</span></div></div>
-      <div class="pathway-row no-border">
-        <div class="cell ce"><div class="pill" data-pid="SNC1L"><span class="pcode">SNC1L</span><span class="pname">Sciences (local)</span></div></div>
-        <div class="cell ce"><div class="pill" data-pid="SNC2L"><span class="pcode">SNC2L</span><span class="pname">Sciences (local)</span></div></div>
-        <div class="cell ce"><div class="pill" data-pid="SVN3E"><span class="pcode">SVN3E</span><span class="pname">Sciences env.</span></div></div>
-        <div class="cell ce"><div class="pill" data-pid="SNC4E"><span class="pcode">SNC4E</span><span class="pname">Sciences</span></div></div>
-      </div>
+    </div>
+  </div>
     </div>
   </div>
 
@@ -291,14 +273,6 @@ html.dark-mode .pb-e { background:rgba(123,31,162,.18); color:#ce93d8; }
         <div class="cell cc"><div class="pill" data-pid="FRA2P"><span class="pcode">FRA2P</span><span class="pname">Français</span></div></div>
         <div class="cell cc"><div class="pill" data-pid="FRA3C"><span class="pcode">FRA3C</span><span class="pname">Français</span></div></div>
         <div class="cell cc"><div class="pill" data-pid="FRA4C"><span class="pcode">FRA4C</span><span class="pname">Français</span></div></div>
-      </div>
-      <div class="path-spacer"></div>
-      <div class="pathway-row"><div class="pathway-label-row"><span class="pbadge pb-e"><i class="bi bi-stars me-1"></i>Essentiel</span></div></div>
-      <div class="pathway-row no-border">
-        <div class="cell ce"><div class="pill" data-pid="FRL1W_e"><span class="pcode">FRL1W</span><span class="pname">Français</span></div></div>
-        <div class="cell-empty"></div>
-        <div class="cell ce"><div class="pill" data-pid="FRA3E"><span class="pcode">FRA3E</span><span class="pname">Français</span></div></div>
-        <div class="cell ce"><div class="pill" data-pid="FRA4E"><span class="pcode">FRA4E</span><span class="pname">Français</span></div></div>
       </div>
       <div class="path-spacer"></div>
       <div class="pathway-row"><div class="pathway-label-row"><span class="pbadge pb-o"><i class="bi bi-globe me-1"></i>Optionnel</span></div></div>
@@ -392,14 +366,6 @@ html.dark-mode .pb-e { background:rgba(123,31,162,.18); color:#ce93d8; }
         <div class="cell cc"><div class="pill" data-pid="MPM2P"><span class="pcode">MPM2P</span><span class="pname">Mathématiques</span></div></div>
         <div class="cell cc"><div class="pill" data-pid="MCF3M"><span class="pcode">MCF3M</span><span class="pname">Fonctions</span></div></div>
         <div class="cell cc"><div class="pill" data-pid="MAP4C"><span class="pcode">MAP4C</span><span class="pname">Méthodes</span></div></div>
-      </div>
-      <div class="path-spacer"></div>
-      <div class="pathway-row"><div class="pathway-label-row"><span class="pbadge pb-e"><i class="bi bi-stars me-1"></i>Essentiel</span></div></div>
-      <div class="pathway-row no-border">
-        <div class="cell ce"><div class="pill" data-pid="MAT1L"><span class="pcode">MAT1L</span><span class="pname">Mathématiques</span></div></div>
-        <div class="cell ce"><div class="pill" data-pid="MAT2L"><span class="pcode">MAT2L</span><span class="pname">Mathématiques</span></div></div>
-        <div class="cell ce"><div class="pill" data-pid="MEL3E"><span class="pcode">MEL3E</span><span class="pname">Mathématiques</span></div></div>
-        <div class="cell ce"><div class="pill" data-pid="MEL4E"><span class="pcode">MEL4E</span><span class="pname">Mathématiques</span></div></div>
       </div>
     </div>
   </div>
@@ -677,27 +643,18 @@ function showSubject(id, btn) {
 // Each entry: { svg: 'svgId', wrap: 'wrapId', arrows: [[fromPid, toPid, color], ...] }
 const ARROW_DEFS = {
   sciences: [
-    // Pré-universitaire chain
     ['SNC1W','SNC2D','#1976d2'],
     ['SNC2D','SBI3U','#1976d2'], ['SBI3U','SBI4U','#1976d2'],
     ['SNC2D','SCH3U','#1976d2'], ['SCH3U','SCH4U','#1976d2'],
     ['SNC2D','SPH3U','#1976d2'], ['SPH3U','SPH4U','#1976d2'],
-    ['SBI3U','SES4U','#1976d2'], ['SCH3U','SES4U','#1976d2'], ['SPH3U','SES4U','#1976d2'],
-    // SNC4M reachable from any 11e science (show from each)
-    ['SBI3U','SNC4M','#1976d2'], ['SCH3U','SNC4M','#1976d2'], ['SPH3U','SNC4M','#1976d2'],
-    ['SVN3M','SNC4M','#388e3c'], ['SBI3C','SNC4M','#388e3c'],
-    // Pré-collégiale chain
     ['SNC1W_c','SNC2P','#388e3c'],
-    ['SNC2P','SVN3M','#388e3c'], ['SNC2P','SBI3C','#388e3c'],
-    ['SVN3M','SCH4C','#388e3c'], ['SBI3C','SCH4C','#388e3c'],
-    ['SBI3C','SPH4C','#388e3c'], ['SVN3M','SPH4C','#388e3c'],
-    // Préemploi chain
-    ['SNC1L','SNC2L','#7b1fa2'], ['SNC2L','SVN3E','#7b1fa2'], ['SVN3E','SNC4E','#7b1fa2'],
+    ['SNC2P','SBI3C','#388e3c'],
+    ['SNC2P','SCH4C','#388e3c'],
+    ['SNC2P','SPH4C','#388e3c'],
   ],
   francais: [
     ['FRL1W_u','FRA2D','#1976d2'],['FRA2D','FRA3U','#1976d2'],['FRA3U','FRA4U','#1976d2'],
     ['FRL1W_c','FRA2P','#388e3c'],['FRA2P','FRA3C','#388e3c'],['FRA3C','FRA4C','#388e3c'],
-    ['FRL1W_e','FRA3E','#7b1fa2'],['FRA3E','FRA4E','#7b1fa2'],
     ['EANAO','EANBO','#e65100'],
   ],
   anglais: [
@@ -712,7 +669,6 @@ const ARROW_DEFS = {
     // MDM4U has TWO prereqs: MCR3U and MDM2D
     ['MCR3U','MDM4U','#1976d2'],['MDM2D','MDM4U','#1976d2'],
     ['MTH1W_c','MPM2P','#388e3c'],['MPM2P','MCF3M','#388e3c'],['MCF3M','MAP4C','#388e3c'],
-    ['MAT1L','MAT2L','#7b1fa2'],['MAT2L','MEL3E','#7b1fa2'],['MEL3E','MEL4E','#7b1fa2'],
   ],
   eps: [
     ['PAL1O','PAL2O','#e65100'],['PAL2O','PAL3O','#e65100'],['PAL3O','PAL4O','#e65100'],
